--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<title>IDB SQL</title>
 </head>
 <body>
-    <script src ="src/idbquery.js"></script>
+    <script src ="src/IDB.js"></script>
 </body>
 </html>
