schema to database and tables

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>IDB SQL</title>
 </head>
 <body>
+    <script src="src/Driver.js"></script>
     <script src ="src/IDB.js"></script>
 </body>
 </html>
