--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>IDB SQL</title>
 </head>
 <body>
-    <script src ="scripts/IDB.min.js"></script>
+    <script src ="scripts/IDB.js"></script>
     <script>
     </script>
 </body>
